finished adding post creation feature

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -10,8 +10,8 @@
 <div class="container">
     <h1>Log In to JavaTweet</h1>
 
-    <form action="/your-login-endpoint" method="post">
-        <div class="input-group">
+    <form id="loginForm">
+    <div class="input-group">
             <input type="text" name="username" placeholder="Username or Email" required>
         </div>
 
@@ -24,5 +24,6 @@
 
     <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
 </div>
+<script src="LoginView.js"></script>
 </body>
 </html>
