--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Welcome to JavaTweet</h1>
+    <h1>Welcome to BlogBridge</h1>
     <button class="btn" onclick="location.href='signup.html'">Sign Up</button>
     <button class="btn" onclick="location.href='login.html'">Log In</button>
 </div>
